tests/ui/enum-discriminant/generic-self-in-discr-ice.stderr
error: generic `Self` types are not permitted in enum discriminant values
  --> $DIR/generic-self-in-discr-ice.rs:7:24
   |
LL |     X = size_of::<*mut Self>(),
   |                        ^^^^

error: aborting due to 1 previous error

